src/test/ui/label/label_misspelled_2.stderr
error: expected identifier, found keyword `for`
  --> $DIR/label_misspelled_2.rs:11:8
   |
LL |     c: for _ in 0..1 {
   |        ^^^ expected identifier, found keyword

error: expected `<`, found reserved identifier `_`
  --> $DIR/label_misspelled_2.rs:11:12
   |
LL |     c: for _ in 0..1 {
   |      -     ^ expected `<`
   |      |
   |      tried to parse a type due to this type ascription
   |
   = note: `#![feature(type_ascription)]` lets you annotate an expression with a type: `<expr>: <type>`
   = note: see issue #23416 <https://github.com/rust-lang/rust/issues/23416> for more information

error[E0425]: cannot find value `b` in this scope
  --> $DIR/label_misspelled_2.rs:9:15
   |
LL |     'b: for _ in 0..1 {
   |     -- a label with a similar name exists
LL |
LL |         break b;
   |               ^
   |               |
   |               not found in this scope
   |               help: use the similarly named label: `'b`

warning: unused label
  --> $DIR/label_misspelled_2.rs:7:5
   |
LL |     'b: for _ in 0..1 {
   |     ^^
   |
note: the lint level is defined here
  --> $DIR/label_misspelled_2.rs:1:9
   |
LL | #![warn(unused_labels)]
   |         ^^^^^^^^^^^^^

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0425`.
